# # Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.3 foreign

noinst_LTLIBRARIES = libbbmpeg.la

if HAVE_ASM_NASM
BB_SRC2 = \
	fdct_mmx.s \
	idct_mmx.s \
	quant_mmx.s \
	motion_mmx.s \
	variance_mmx.s
endif

if HAVE_MMX
BB_SRC1 = \
	fdctdata.c \
	idctdata.c \
	quantdata.c \
	predict_mmx.S 
MMX = -DHAVE_MMX
endif

if HAVE_SSE
BB_SRC3 = predict_sse.S
endif

AM_CPPFLAGS = $(MMX)
AM_CFLAGS = \
	-funroll-loops \
	-ffast-math

libbbmpeg_la_SOURCES = \
	dovideo.c \
	params.c \
	bits.c \
	puthdr.c \
	putpic.c \
	putmpg.c \
	putvlc.c \
	stats.c \
	quantize.c \
	predict.c \
	ratectl.c \
	idct.c \
	motion.c \
	transfrm.c \
	fdctref.c \
	resize.c \
	$(BB_SRC1) \
	$(BB_SRC2) \
	$(BB_SRC3)

noinst_HEADERS = \
	mtable.h \
	mplex.h \
	mmx.h \
	main.h \
	imgresample.h \
	gmo_read.h \
	encaudio.h \
	consts.h \
	consts1.h \
	common.h \
	bbencode.h

EXTRA_DIST = \
	README.TXT \
	bbencode.h \
	bdist1.s \
	bdist2.s \
	common.h \
	consts.h \
	consts1.h \
	dist1-trans.s \
	dist1.s \
	dist2.s \
	edist1.s \
	encaudio.h \
	fdct_mmx.s \
	gmo_read.h \
	idct_mmx.s \
	imgresample.h \
	main.h \
	mmx.h \
	motion_mmx.s \
	mplex.h \
	mtable.h \
	pred_mmx.s \
	pred_old.s \
	predict_mmx.S \
	predict_sse.S \
	quant_mmx.s \
	svcd352x288.cfg \
	template.cfg \
	variance_mmx.s \
	mmxasm.c

SUBDIRS = . tcmplex

ASM = @NASM@
ASMFLAGS = @NASMFLAGS@

# these nasm objects are OK for libraries in linux and BSD variants,
# but libtool doesn't know that, so we fake it.
.s.lo:
	$(ASM) $(ASMFLAGS) -o $@ `test -f '$<' || echo '$(scrdir)/'`$<
	@new_name=".libs/`echo $@ | sed -e 's,\.lo$$,\.o,'`" && \
		 mv $@ $$new_name && \
		 echo "# $@ - a libtool object file" >> $@ && \
		 echo "# Generated by ltmain.sh - GNU libtool 1.5 (1.1220 2003/04/05 19:32:58)" >> $@ && \
		 echo "#" >> $@ && \
		 echo "# Please DO NOT delete this file!" >> $@ && \
		 echo "# It is necessary for linking the library." >> $@ && \
		 echo "" >> $@ && \
		 echo "# Name of the PIC object." >> $@ && \
		 echo "pic_object='$$new_name'" >> $@ && \
		 echo "" >> $@ && \
		 echo "# Name of the non-PIC object." >> $@ && \
		 echo "non_pic_object=none" >> $@
