AUTOMAKE_OPTIONS = 1.3 foreign
EXTRA_DIST =  \
  V2divx.pl \
  aviplay.pl \
  bitrate.readme \
  divx_linux_guide.html \
  mpeg2avi.sh \
  subrip/ChangeLog \
  subrip/Makefile \
  subrip/README \
  subrip/README.gocr \
  subrip/README.srttool \
  subrip/README.subtitle2pgm \
  subrip/README.vobsub \
  subrip/gocrfilter_en.sed \
  subrip/gocrfilter_fr.sed \
  subrip/gocrfilter_nl.sed \
  subrip/gocrfilter_none.sed \
  subrip/pgm2txt \
  subrip/spudec.c \
  subrip/spudec.h \
  subrip/srttool.c \
  subrip/subtitle2pgm.c \
  subrip/subtitle2pgm.h \
  subrip/subtitle2vobsub.c \
  subrip/vobsub.c \
  subrip/vobsub.h \
  tc_rescale_audio.pl \
  vob2avi.readme \
  bitrate \
  mpipe.c \
  vob2avi
