AUTOMAKE_OPTIONS = 1.3 foreign

EXTRA_DIST = $(docs_DATA) 

SUBDIRS = . man html

docsdir = $(datadir)/doc/transcode

docs_DATA = \
                    clone.txt \
                    export_mpeg.txt \
                    export_ffmpeg.txt \
                    filter_dnr.txt \
                    filter_logo.txt \
                    filter_text.txt \
                    filter_logoaway.txt \
                    filter_yuvdenoise.txt \
                    import_nvrec.txt \
                    import-xml.txt \
                    README.cluster \
                    README.rip \
                    README.sync \
                    README.vcd \
		    README.Inverse.Telecine.txt \
                    template.cfg.txt\
		    filter-socket.txt\
		    avi_comments.txt\
		    filter-API.txt export-API.txt import-API.txt \
		    OPTIMIZERS


