# # Process this file with automake to produce Makefile.in.

EXTRA_DIST = \
	$(docs_DATA) \
	filter-help.txt \
	make-filter-man.sh \
	make-module-man.sed \
	export-mods.txt \
	import-mods.txt

SUBDIRS = \
	man \
	html

docsdir = $(datadir)/doc/transcode

docs_DATA = \
	DV-to-DVD-HOWTO.txt \
	OPTIMIZERS \
	README.Inverse.Telecine.txt \
	README.dv \
	README.cluster \
	README.filter.modfps \
	README.rip \
	README.sync \
	README.vcd \
	README.xvid-credits \
	RELNOTES-0.6.13 \
	architecture.txt \
	avi_comments.txt \
	clone.txt \
	export-API.txt \
	export_ffmpeg.txt \
	export_mp2.txt \
	export_pvm.txt \
	filter-API.txt \
	filter-socket.txt \
	filter_dnr.txt \
	filter_logo.txt \
	filter_logoaway.txt \
	filter_text.txt \
	filter_yuvdenoise.txt \
	framerate.txt \
	ibp_support.txt \
	import-API.txt \
	import-xml.txt \
	import_nvrec.txt \
	import_v4l2.txt \
	import_yuv.txt \
	import_x11.txt \
	module-system-API.txt \
	pvm.cfg \
	faq \
	template.cfg.txt
